--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Dinesh Pandiyan",
-  "name": "Dinesh Pandiyan | Full Stack Dev",
+  "short_name": "Zhiyuan Li",
+  "name": "Dinesh Pandiyan",
   "icons": [
     {
       "src": "favicon.ico",
