--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,11 +6,8 @@ phases:
       nodejs: 10
   pre_build:
     commands:
-      - echo Installing source NPM dependencies...
-      - npm install
-
-      - echo Fixing node-sass...
-      - npm i --unsafe-perm node-sass
+      - echo Installing source NPM dependencies and fixing node-sass...
+      - npm install --unsafe-perm node-sass
   build:
     commands:
       - echo Compiling and testing the Node.js code...
