--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,7 +7,8 @@ phases:
   pre_build:
     commands:
       - echo Installing source NPM dependencies and fixing node-sass...
-      - npm install -g --unsafe-perm node-sass
+      - npm install 
+      - npm install --unsafe-perm node-sass
   build:
     commands:
       - echo Compiling and testing the Node.js code...
