--- a/buildspec.yml
+++ b/buildspec.yml
@@ -8,7 +8,7 @@ phases:
     commands:
       - echo Installing source NPM dependencies and fixing node-sass...
       - npm install
-      - sudo npm install --unsafe-perm node-sass
+      - npm install --unsafe-perm node-sass
   build:
     commands:
       - echo Compiling and testing the Node.js code...
